--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/bootstrap/dist/css/bootstrap-grid.min.css";
+
+div.card {
+  margin-top: 5px;
+}
+
+div.card.header {
+  background-color: cornflowerblue;
+  color: ivory;
+}
